<resources>
    <string name="app_name">Todoc Kotlin</string>

    <string name="list_title">Task list</string>
    <string name="detail_title">Task details</string>

    <string name="label_action_sort">Sort</string>

    <string name="sort_alphabetical_task">A -&gt; Z (task)</string>
    <string name="sort_alphabetical_invert_task">Z -&gt; A (task)</string>
    <string name="sort_alphabetical_project">A -&gt; Z (project)</string>
    <string name="sort_alphabetical_invert_project">Z -&gt; A (project)</string>
    <string name="sort_oldest_first">Oldest first</string>
    <string name="sort_recent_first">Recent first</string>

    <string name="add_task">Add a task</string>
    <string name="add">Add</string>

    <string name="no_task">You have no task to perform</string>

    <string name="task_name_hint">Task name</string>
    <string name="task_project_hint">Project name</string>

    <string name="empty_task_name">The task name is required</string>
    <string name="empty_project">A project must be selected</string>

    <string name="task_id">Task ID</string>
    <string name="task_name">Task name</string>
    <string name="project_name">Project name</string>
    <string name="creation_date">Creation date</string>
</resources>