<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.MainActivity"
    >
    <item
        android:id="@+id/action_filter"
        android:icon="@drawable/ic_sort"
        android:title="@string/label_action_sort"
        app:showAsAction="ifRoom"
        >
        <menu>
            <item
                android:id="@+id/filter_alphabetical_task"
                android:title="@string/sort_alphabetical_task"
                app:showAsAction="never|withText"
                />
            <item
                android:id="@+id/filter_alphabetical_inverted_task"
                android:title="@string/sort_alphabetical_invert_task"
                app:showAsAction="never|withText"
                />
            <item
                android:id="@+id/filter_alphabetical_project"
                android:title="@string/sort_alphabetical_project"
                app:showAsAction="never|withText"
                />
            <item
                android:id="@+id/filter_alphabetical_inverted_project"
                android:title="@string/sort_alphabetical_invert_project"
                app:showAsAction="never|withText"
                />
            <item
                android:id="@+id/filter_oldest_first"
                android:title="@string/sort_oldest_first"
                app:showAsAction="never|withText"
                />
            <item
                android:id="@+id/filter_recent_first"
                android:title="@string/sort_recent_first"
                app:showAsAction="never|withText"
                />
        </menu>
    </item>
</menu>